# simple-mitre-mcp

./: .coverage  .coverage_history.json  .env.example  .flake8  .gitignore  .validation_history.json  CHANGES_SUMMARY.md  CLAUDE.md  CONTAINER_DEPLOYMENT.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  PR_DESCRIPTION.md  README.md  WEB_EXPLORER_README.md  claude_desktop_config.json  claude_todo.md  coverage.json  coverage_overall.json  coverage_test.json  debug_group_techniques.py  debug_tactics.py  docker-compose.yml  fix_strings.py  http_proxy.py  main.py  main_stdio.py  mcp_client_config.json  mypy.ini  pyproject.toml  pytest.ini  slow_tests_analysis.md  start_explorer.py  test_api_demo.html  test_consolidation_mapping.json  test_coverage_report.txt  test_performance_report.txt  test_port_config.py  test_suite_analysis.md  (+2 more)
.github/: CLAUDE_CODE_SETUP.md  pull_request_template.md
config/: data_sources.yaml  entity_schemas.yaml  tools.yaml
deployment/: ENVIRONMENT_CONFIG.md  PERFORMANCE_MONITORING.md  validate_web_explorer.sh
docs/: DEVELOPER_GUIDE.md  ENVIRONMENT_CONFIG.md  README.md  TROUBLESHOOTING.md
examples/: claude_desktop_config.json  mcp_client_config.json  stix2_validation_examples.py
scripts/: coverage_regression_monitor.py  performance_benchmark.py  run_tests_optimized.py  run_validation_suite.py  validate_coverage_performance.py
src/: __init__.py  config_loader.py  data_loader.py  http_proxy.py  main_stdio.py  main_web.py  mcp_server.py
tests/: PERFORMANCE_REPORT.md  base.py  conftest.py  factories.py  performance_config.py  test_mcp_server.py  (+37 more)
(+98 files in other folders)
