[project]
name = "mitre-attack-mcp-server"
version = "0.1.0"
description = "A Model Context Protocol server that provides structured access to the MITRE ATT&CK framework for Large Language Models"
authors = [
    {name = "MCP Server", email = "mcp@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.12.15",
    "aiohttp-cors>=0.8.1",
    "flask>=3.0.3",
    "mcp>=1.12.3",
    "psutil>=6.1.1",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.4",
    "stix2>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/example/mitre-attack-mcp-server"
Repository = "https://github.com/example/mitre-attack-mcp-server"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.uv]
dev-dependencies = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "pytest-asyncio>=1.1.0",
    "aiohttp>=3.8.0",
    "pytest-cov>=6.2.1",
    "mypy>=1.17.1",
    "bandit>=1.8.6",
    "safety>=3.6.0",
    "types-pyyaml>=6.0.12.20250516",
    "types-requests>=2.32.4.20250611",
    "selenium>=4.34.2",
]

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]
